* style search item

--- a/app/src/main/res/layout/location_item.xml
+++ b/app/src/main/res/layout/location_item.xml
@@ -25,9 +25,11 @@
 		android:gravity="center_vertical"
 		android:minHeight="32dp"
 		android:padding="3dp"
+		android:layout_margin="5dp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/imageView"
 		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
 		tools:text="This can a be location that has a very long name. It can even span two or more lines."/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
