--- a/app/src/main/res/layout/location_view.xml
+++ b/app/src/main/res/layout/location_view.xml
@@ -40,6 +40,18 @@
 		tools:visibility="visible"/>
 
 	<ImageButton
+		android:id="@+id/searchGpsButton"
+		android:layout_width="38dp"
+		android:layout_height="48dp"
+		android:background="?attr/selectableItemBackgroundBorderless"
+		android:contentDescription="@string/gps_button"
+		android:src="@drawable/ic_gps"
+		app:tint="?colorControlNormal"
+		android:visibility="gone"
+		app:srcCompat="@drawable/ic_gps"
+		tools:visibility="visible"/>
+
+	<ImageButton
 		android:id="@+id/clearButton"
 		android:layout_width="38dp"
 		android:layout_height="48dp"
