--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -69,7 +69,7 @@
 		android:id="@+id/bottomSheet"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		app:behavior_hideable="true"
+		app:behavior_hideable="false"
 		app:elevation="5dp"
 		app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"/>
 
