--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout
+	<ScrollView
 		android:id="@+id/swipe"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -14,16 +14,78 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:srl_direction="both"
 		tools:visibility="visible">
 
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/list"
+		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			tools:listitem="@layout/list_item_trip"/>
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
 
-	</com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<Button
+					android:text="Earlier"
+					android:id="@+id/search_more_earlier"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent"
+					app:layout_constraintBottom_toBottomOf="parent"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					tools:ignore="HardcodedText" />
+
+				<TextView
+					android:text="Last updated: ..."
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintTop_toTopOf="parent"
+					app:layout_constraintBottom_toBottomOf="parent"
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					tools:ignore="HardcodedText" />
+
+			</androidx.constraintlayout.widget.ConstraintLayout>
+
+			<ProgressBar
+				android:id="@+id/searchMoreEarlierProgressBar"
+				style="?android:progressBarStyleLarge"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_gravity="center_horizontal"
+				android:layout_marginEnd="16dp"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="16dp"
+				android:visibility="gone"
+				tools:visibility="visible"/>
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/list"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				tools:listitem="@layout/list_item_trip"/>
+
+			<ProgressBar
+				android:id="@+id/searchMoreLaterProgressBar"
+				style="?android:progressBarStyleLarge"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_gravity="center_horizontal"
+				android:layout_marginEnd="16dp"
+				android:layout_marginStart="16dp"
+				android:layout_marginTop="16dp"
+				android:visibility="gone"
+				tools:visibility="visible"/>
+
+			<Button
+				android:text="later"
+				android:id="@+id/search_more_later"
+				android:layout_gravity="end"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"/>
+
+		</LinearLayout>
+
+	</ScrollView>
 
 	<ProgressBar
 		android:id="@+id/progressBar"
