--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -16,6 +16,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:fitsSystemWindows="true"
+			android:minHeight="65dp"
 			app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
 			<fragment
