--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<ScrollView
+	<androidx.core.widget.NestedScrollView
 		android:id="@+id/swipe"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -86,7 +86,7 @@
 
 		</LinearLayout>
 
-	</ScrollView>
+	</androidx.core.widget.NestedScrollView>
 
 	<ProgressBar
 		android:id="@+id/progressBar"
